Update the requirements for Web Design 2

--- a/index.html
+++ b/index.html
@@ -4,45 +4,43 @@
   <meta charset="utf-8">
   <title>Chapter XVIII · Twenty Thousand Leagues</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/modules.css" rel="stylesheet">
-  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic,700" rel="stylesheet">
 </head>
 <body>
 
-  <header class="book-ends max-length gutter pad-t-1-2 pad-b-1-2">
-    <strong class="book-title giga not-bold">Twenty Thousand Leagues Under the Sea</strong>
-    <p class="book-author push-0"><span class="book-author-by micro italic">by</span> <span class="mega">Jules Verne</span></p>
-  </header>
+  <div>
+    <strong>Twenty Thousand Leagues Under the Sea</strong>
+    <p><span class="by">by</span> <span>Jules Verne</span></p>
+  </div>
 
-  <article class="max-length">
-    <header class="chapter-ends chapter-name pad-t-1-2 pad-b-1-2 gutter push relative">
-      <hgroup class="chapter-details">
-        <h1 class="chapter-number not-bold push-0 italic kilo">Chapter XVIII</h1>
-        <h2 class="chapter-title not-bold push-0 peta">The Poulps</h2>
-      </hgroup>
-      <nav>
-        <ul class="list-group-inline text-center push-0 pin-rc gutter-1-2">
+  <div>
+    <div>
+      <div>
+        <h1>Chapter XVIII</h1>
+        <h2>The Poulps</h2>
+      </div>
+      <div>
+        <ul>
           <li>
-            <a class="btn chapter-btn" href="chapter-xvii.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
+            <a href="chapter-xvii.html">
+              <i class="icon"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="contents.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
+            <a href="contents.html">
+              <i class="icon"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="chapter-xix.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
+            <a href="chapter-xix.html">
+              <i class="icon"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
             </a>
           </li>
         </ul>
-      </nav>
-    </header>
-    <div class="gutter push old-book-style">
+      </div>
+    </div>
+    <div>
       <p>For several days the Nautilus kept off from the American coast. Evidently it did not wish to risk the tides of the Gulf of Mexico or of the sea of the Antilles. April 16th, we sighted Martinique and Guadaloupe from a distance of about thirty miles. I saw their tall peaks for an instant. The Canadian, who counted on carrying out his projects in the Gulf, by either landing or hailing one of the numerous boats that coast from one island to another, was quite disheartened. Flight would have been quite practicable, if Ned Land had been able to take possession of the boat without the Captain’s knowledge. But in the open sea it could not be thought of. The Canadian, Conseil, and I had a long conversation on this subject. For six months we had been prisoners on board the Nautilus. We had travelled 17,000 leagues; and, as Ned Land said, there was no reason why it should come to an end. We could hope nothing from the Captain of the Nautilus, but only from ourselves. Besides, for some time past he had become graver, more retired, less sociable. He seemed to shun me. I met him rarely. Formerly he was pleased to explain the submarine marvels to me; now he left me to my studies, and came no more to the saloon. What change had come over him? For what cause? For my part, I did not wish to bury with me my curious and novel studies. I had now the power to write the true book of the sea; and this book, sooner or later, I wished to see daylight. The land nearest us was the archipelago of the Bahamas. There rose high submarine cliffs covered with large weeds. It was about eleven o’clock when Ned Land drew my attention to a formidable pricking, like the sting of an ant, which was produced by means of large seaweeds.</p>
       <p>“Well,” I said, “these are proper caverns for poulps, and I should not be astonished to see some of these monsters.”</p>
       <p>“What!” said Conseil; “cuttlefish, real cuttlefish of the cephalopod class?”</p>
@@ -60,10 +58,10 @@
       <p>“In a church!” cried the Canadian.</p>
       <p>“Yes; friend Ned. In a picture representing the poulp in question.”</p>
       <p>“Good!” said Ned Land, bursting out laughing.</p>
-      <figure class="pad-t">
-        <img class="img-flex inset-img push-1-2" src="images/kraken.jpg" alt="">
-        <figcaption class="italic text-center">“I remember perfectly to have seen a large vessel drawn under the waves by an octopus’s arm.”</figcaption>
-      </figure>
+      <div>
+        <img src="images/kraken.jpg" alt="">
+        <p>“I remember perfectly to have seen a large vessel drawn under the waves by an octopus’s arm.”</p>
+      </div>
       <p>“He is quite right,” I said. “I have heard of this picture; but the subject represented is taken from a legend, and you know what to think of legends in the matter of natural history. Besides, when it is a question of monsters, the imagination is apt to run wild. Not only is it supposed that these poulps can draw down vessels, but a certain Olaus Magnus speaks of an octopus a mile long that is more like an island than an animal. It is also said that the Bishop of Nidros was building an altar on an immense rock. Mass finished, the rock began to walk, and returned to the sea. The rock was a poulp. Another Bishop, Pontoppidan, speaks also of a poulp on which a regiment of cavalry could manoeuvre. Lastly, the ancient naturalists speak of monsters whose mouths were like gulfs, and which were too large to pass through the Straits of Gibraltar.”</p>
       <p>“But how much is true of these stories?” asked Conseil.</p>
       <p>“Nothing, my friends; at least of that which passes the limit of truth to get to fable or legend. Nevertheless, there must be some ground for the imagination of the story-tellers. One cannot deny that poulps and cuttlefish exist of a large species, inferior, however, to the cetaceans. Aristotle has stated the dimensions of a cuttlefish as five cubits, or nine feet two inches. Our fishermen frequently see some that are more than four feet long. Some skeletons of poulps are preserved in the museums of Trieste and Montpelier, that measure two yards in length. Besides, according to the calculations of some naturalists, one of these animals only six feet long would have tentacles twenty-seven feet long. That would suffice to make a formidable monster.”</p>
@@ -112,32 +110,32 @@
       <p>“I owed myself this revenge!” said the Captain to the Canadian.</p>
       <p>Ned bowed without replying. The combat had lasted a quarter of an hour. The monsters, vanquished and mutilated, left us at last, and disappeared under the waves. Captain Nemo, covered with blood, nearly exhausted, gazed upon the sea that had swallowed up one of his companions, and great tears gathered in his eyes.</p>
     </div>
-    <footer class="chapter-ends chapter-copyright text-center pad-t-1-2 pad-b-1-2 gutter">
-      <nav>
-        <ul class="list-group-inline text-center push-0">
+    <div>
+      <div>
+        <ul>
           <li>
-            <a class="btn chapter-btn" href="chapter-xvii.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
+            <a href="chapter-xvii.html">
+              <i class="icon"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="contents.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
+            <a href="contents.html">
+              <i class="icon"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="chapter-xix.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
+            <a href="chapter-xix.html">
+              <i class="icon"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
             </a>
           </li>
         </ul>
-      </nav>
-    </footer>
-  </article>
+      </div>
+    </div>
+  </div>
 
-  <footer class="book-ends text-center max-length gutter pad-t-1-2 pad-b-1-2">
-    <small class="micro">Twenty Thousand Leagues Under the Sea © Jules Verne, 1870.</small>
-  </footer>
+  <div>
+    <small>Twenty Thousand Leagues Under the Sea © Jules Verne, 1870.</small>
+  </div>
 
 </body>
 </html>
